index change and create style

--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git</title>
+    <link rel="stylesheet" href="./CSS/main.css">
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="nav">
+            <div class="container">
+                <a href="" class="nav__logo">Logo</a>
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a class="nav__link" href="#!">home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#!">home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#!">home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#!">home</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        
+    </header>
 </body>
 </html>
