add h1 and restyle in css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <nav class="nav">
             <div class="container">
-                <a href="" class="nav__logo">Logo</a>
+                <a href="#!" class="nav__logo">Logo</a>
                 <ul class="nav__list">
                     <li class="nav__item">
                         <a class="nav__link" href="#!">home</a>
@@ -27,7 +27,7 @@
                 </ul>
             </div>
         </nav>
-        
+        <h1 class="header__title">Git start</h1>
     </header>
 </body>
 </html>
