--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </div>
         </nav>
-        <h1 class="header__title">Git start</h1>
+        <h1 class="header__title">Git end</h1>
     </header>
 </body>
 </html>
